frontpage error - white space appearing on tall enough monitor - fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,12 @@ html, body{
   font-family: 'Lora', serif;
 }
 
+html{
+  min-height: 100vh;
+  background-color: seagreen;
+  background-image: url("/assets/tesselate_grey1.png");
+}
+
 a, p{
   font-family: 'Lora', serif;
 }
